Set up project skeleton
