# src/main/gen/com/sarfraz/priority/api/ApiUtil.java
@@ -1,4 +1,4 @@
-package com.sarfraz.api;
+package com.sarfraz.priority.api;
 
 import org.springframework.web.context.request.NativeWebRequest;
 
