# src/main/gen/com/sarfraz/priority/model/AreaPriority.java
@@ -1,10 +1,10 @@
-package com.sarfraz.model;
+package com.sarfraz.priority.model;
 
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonValue;
-import com.sarfraz.model.Area;
+import com.sarfraz.priority.model.Area;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import org.openapitools.jackson.nullable.JsonNullable;
@@ -14,7 +14,7 @@ import javax.validation.constraints.*;
 /**
  * AreaPriority
  */
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-07-01T20:23:22.811265+05:30[Asia/Calcutta]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2021-07-01T20:49:10.499858+05:30[Asia/Calcutta]")
 public class AreaPriority   {
   @JsonProperty("area")
   private Area area;
